--- a/m1.Rmd
+++ b/m1.Rmd
@@ -2,5 +2,12 @@
 
 ## Learning outcomes
 
+```{r}
+library(tidyverse)
+tbl1 <- tibble(name = c("Lars", "Susan", "Hans"), age = c(23, 56, 45))
+tbl1
+```
+
+
 
 
